--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,118 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Cinzel+Decorative&family=Dancing+Script:wght@500&family=Josefin+Sans:ital,wght@0,300;1,700&family=Rubik+Iso&family=Shantell+Sans:wght@300&family=Source+Code+Pro:ital,wght@1,700&family=Special+Elite&family=VT323&display=swap');
+
+
+.App{
+  font-family: 'Josefin Sans';
+  
+}
+
+
+.header{
+  position:relative;
+  border: 1px solid black;
+  width: 100%;
+  height: 40vh;
+  margin: 0;
+  
+}
+
+.background-image{
+  width: 100%;
+  background-image: url('https://images.unsplash.com/photo-1512531123205-560f5974e686?q=80&w=2000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  top: -600px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  z-index: -1;
+  
+}
+
+.background-image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); 
+}
+
+
+.header-quote{
+  position: relative;
+  width: 100%;
+  margin-top: 10%;
+  font-size: 1.8em;
   text-align: center;
+  color: white;
+  z-index:1;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.skills-container{
+  margin: 2em;
+  height: 10em;
+  position: relative;
+  text-align: center;
   display: flex;
   flex-direction: column;
+}
+
+.skills{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  position:absolute;
+  justify-content: space-around;
   align-items: center;
+  margin: 0;
+  padding: 0;
+  
+}
+
+.skills li{
+  list-style-type: none;
+  font-weight: bold;
+}
+
+.projects-container{
+  text-align:center;
+}
+
+.projects{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  gap: 10px;
+  width: 80vw;
+  margin: 0 auto;
+
+}
+
+.project{
+  height: 300px;
+  width: 200px;
+  background-color: grey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  transition: .2s;
+}
+
+.project:hover {
+  height: 325px;
+  width: 225px;
+}
+
+.project h3 {
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
