updated style and added new project

--- a/src/App.css
+++ b/src/App.css
@@ -5,23 +5,11 @@
   font-family: 'Josefin Sans';
   
 }
-
-
-
- .background-image{
-  width: 100%;
-  background-image: url('https://images.unsplash.com/photo-1512531123205-560f5974e686?q=80&w=2000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  position: absolute;
-  top: -600px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  z-index: -1;
-  
+.header{
+  background-image: url('https://images.unsplash.com/photo-1517694712202-14dd9538aa97?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
 }
+
+ 
 
 .background-image::before {
   content: "";
