--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Cinzel+Decorative&family=Dancing+Script:wght@500&family=Josefin+Sans:ital,wght@0,300;1,700&family=Rubik+Iso&family=Shantell+Sans:wght@300&family=Source+Code+Pro:ital,wght@1,700&family=Special+Elite&family=VT323&display=swap');
 
 
-.App{
+body{
   font-family: 'Josefin Sans';
   
 }
